# prefect-modal

./: .gitignore  Makefile  prefect.yaml  pyproject.toml
src/prefect_modal/: __init__.py
src/prefect_modal/flows/: flow1.py  modal_tasks.py
