[project]
name = "prefect-modal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Rondon", email = "rondondaniel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "modal>=1.2.1",
    "prefect[github]>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_modal"]
